# woodgate

./: .coverage  .gitignore  .pre-commit-config.yaml  DESIGN.md  PROGRESS.md  README.md  TESTING.md  mcp_server.py  mypy.ini  playwright_guide.md  playwright_python_guide.md  playwright_python_guide_detailed.md  pyproject.toml  pytest.ini  redhat_search.py  redhat_search.py.orig  redhat_search_refactored.py  requirements.txt  run_all_checks.sh  server.py  server_sync.py  setup_dev_tools.sh  start_server.sh
.github/workflows/: python-tests.yml
docs/: conf.py  conf.py.template  index.rst
docs/source/: modules.rst  woodgate.core.rst  woodgate.rst
tests/: conftest.py  test_async_fixed.py  test_async_helpers.py  test_async_with_playwright.py  test_auth.py  test_auth_extended.py  test_browser.py  test_config.py  test_main.py  test_mcp_server.py  test_playwright_browser.py  test_search.py  test_search_extended.py  test_server.py  test_utils.py  test_with_playwright_fixtures.py
woodgate/: __init__.py  __main__.py  config.py  mcp_mock.py  server.py
woodgate/core/: __init__.py  auth.py  browser.py  search.py  utils.py
