[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "woodgate"
version = "0.1.0"
description = "MCP服务器，用于自动化搜索和从Red Hat客户门户提取数据"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "DEADJOE", email = "smartjoe@gmail.com"},
]
dependencies = [
    "playwright>=1.40.0",
    "mcp>=1.6.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.5.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]  # 忽略行长度检查，由black处理

[tool.ruff.lint.isort]
known-first-party = ["woodgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
